# installer-app

./: CMakeLists.txt  main.cpp
cmake/: QtStaticHelpers.cmake  vendors.cmake
include/: git_hub.h  installer.h  logger.h  state_manager.h
include/ui/: OTextBrowser.h  installerwindow.h
include/ui/components/: markdownrenderer.h
include/ui/pages/: setuppage.h  tospage.h  welcomepage.h
res/: base.qss  resources.qrc
src/: git_hub.cpp  installer.cpp  logger.cpp  state_manager.cpp
src/ui/: installerwindow.cpp
src/ui/components/: markdownrenderer.cpp
src/ui/pages/: setuppage.cpp  tospage.cpp  welcomepage.cpp
ui/: installerwindow.ui  markdownrenderer.ui  setuppage.ui  tospage.ui  welcomepage.ui
